--- a/app/templates/components/ViewInBrowser/index.html
+++ b/app/templates/components/ViewInBrowser/index.html
@@ -1,13 +1,13 @@
 					<tr>
-            <td width="<%= width%>" valign="top" class="wspread" style="min-wdith:<%= width%>px">
-            	<table class="wspread" width="<%= width%>" valign="top" align="center" style="min-width:<%= width%>px;">
+            <td width="<%= style.width%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
+            	<table class="wspread" width="<%= style.width%>" valign="top" align="center" style="min-width:<%= style.width%>px;">
             		<tr>
             			<td width="<%= sidePad%>" class="side-pad">
             				<img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
             			</td>
-            			<td class="gmail-app-fix" style="min-width:<%= width-(2*sidePad)%>px;">
-            				<span style="font-family:Arial, Helvetica, sans-serif; font-size:10px;color:#666666;">
-                      If you are having problems viewing this email please <a href="#" target="_blank" style="font-family:Arial, Helvetica, sans-serif; font-size:10px;color:#666666;">view online</a>.
+            			<td class="gmail-app-fix" align="center" style="min-width:<%= style.width-(2*sidePad)%>px;line-height:<%= (component.style.fontSize || 10) * 1.2%>px">
+            				<span style="font-family:Arial, Helvetica, sans-serif; font-size:<%= component.style.fontSize || 10%>px;color:<%= component.style.color || '#666666'%>;line-height:<%= (component.style.fontSize || 10) * 1.2%>px;">
+                      If you are having problems viewing this email please <a href="#" target="_blank" style="color:<%= component.style.color || '#666666'%>">view online</a>.
                     </span>
             			</td>
             			<td width="<%= sidePad%>" class="side-pad">
