--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,6 +54,7 @@
     }
     table td {
       border-collapse: collapse;
+      padding: 0;
     }
     table {
       border-collapse: collapse;
@@ -184,11 +185,11 @@
   </style>
 </head>
 
-<body yahoo="fix" bgcolor="<%= bgColor%>" style="background: <%= bgColor%>;">
-  <table id="main-wrapper" width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="<%= bgColor%>" style="background: <%= bgColor%>;">
+<body yahoo="fix" bgcolor="<%= style.backgroundColor%>" style="background: <%= style.backgroundColor%>;">
+  <table id="main-wrapper" width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="<%= style.backgroundColor%>" style="background: <%= style.backgroundColor%>;">
     <tr>
       <td width="100%" cellpadding="0" cellspacing="0" border="0" align="center">
-        <table class="wspread" width="<%= width%>" valign="top" align="center" style="min-width:<%= width%>px;">
+        <table class="wspread" width="<%= style.width%>" valign="top" align="center" style="min-width:<%= style.width%>px;">
 <!-- BEGIN EDM COMPONENTS -->
 EDMCOMPONENTS
 <!-- END EDM COMPONENTS -->
