Can compile for multiple variations.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,6 +55,7 @@
     table td {
       border-collapse: collapse;
       padding: 0;
+      line-height: 0;
     }
     table {
       border-collapse: collapse;
