--- a/app/templates/components/LogoHeader/index.html
+++ b/app/templates/components/LogoHeader/index.html
@@ -9,7 +9,7 @@
                     <% if(component.linked) { %>
                     <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;">
                     <% } %>
-                    <img src="http://placehold.it/165x70&amp;text=Logo" alt="" style="display:block;border:0;" />
+                    <img src="http://placehold.it/165x70&amp;text=Logo" alt="" style="display:inline-block;border:0;" />
                     <% if(component.linked) { %>
                     </a>
                     <% } %>
