--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,6 +42,7 @@
       outline: none;
       text-decoration: none;
       -ms-interpolation-mode: bicubic;
+      margin: 0;
     }
     a img {
       border: none;
@@ -59,9 +60,11 @@
     }
     table {
       border-collapse: collapse;
+      border-spacing: 0;
       mso-table-lspace: 0pt;
       mso-table-rspace: 0pt;
     }
+
     .appleLinks {
       pointer-events: none !important;
       cursor: default !important;
@@ -86,7 +89,11 @@
       }
       body[yahoo] .wspread {
         width: 100% !important;
-        display: block !important;
+        height: auto !important;
+        min-width: 0 !important;
+      }
+      body[yahoo] .half-spread {
+        width: 50% !important;
         height: auto !important;
         min-width: 0 !important;
       }
@@ -148,8 +155,17 @@
       body[yahoo] .side-pad {
         width: <%= mSidePad%>px!important;
       }
+      body[yahoo] .tb-pad {
+        height: <%= mTbPad%>px!important;
+      }
+      body[yahoo] .a-right {
+        text-align: right!important;
+      }
+      body[yahoo] .a-left {
+        text-align: left!important;
+      }
       body[yahoo] .mobile-swap {
-        width: auto !important;
+        width: 100% !important;
         height: auto !important;
         display: block !important;
         float: none !important;
@@ -158,6 +174,7 @@
       }
       body[yahoo] .mobile-swap.wide {
         width: 100% !important;
+        max-width: 100%!important;
       }
       body[yahoo] .mob-h-auto {
         height: auto!important;
@@ -184,6 +201,14 @@
       }
     }
   </style>
+  <!--[if gte mso 9]>
+    <style>
+    .msofix {
+      mso-table-lspace:-1pt;
+      mso-table-rspace:-1pt;
+    }
+    </style>
+  <![endif]-->
 </head>
 
 <body yahoo="fix" bgcolor="<%= style.backgroundColor%>" style="background: <%= style.backgroundColor%>;">
