--- a/app/templates/components/AlignedImages2Col/index.html
+++ b/app/templates/components/AlignedImages2Col/index.html
@@ -1,34 +1,52 @@
           <!-- BEGIN <%= component.name%> <%= component.id%> -->
-          <tr>
-            <td width="<%= style.width%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-              <table class="wspread" width="<%= style.width%>" valign="top" align="center" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-width:<%= style.width%>px;">
-                <tr>
-                  <td width="<%= sidePad%>" class="side-pad">
-                    <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
-                  </td>
-                  <td width="<%= (style.width/2)-sidePad%>" align="<%= component.align || 'left'%>" valign="middle">
-                    <% if(component.linked) { %>
-                    <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
-                    <% } %>
-                    <img src="http://placehold.it/100x70&amp;text=Logo" alt="" style="display:inline-block;border:0;" />
-                    <% if(component.linked) { %>
-                    </a>
-                    <% } %>
-                  </td>
-                  <td width="<%= (style.width/2)-sidePad%>" align="<%= component.align || 'left'%>" valign="middle">
-                    <% if(component.linked) { %>
-                    <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
-                    <% } %>
-                    <img src="http://placehold.it/165x70&amp;text=Logo" alt="" style="display:inline-block;border:0;" />
-                    <% if(component.linked) { %>
-                    </a>
-                    <% } %>
-                  </td>
-                  <td width="<%= sidePad%>" class="side-pad">
-                    <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
+          <table cellspacing="0" cellpadding="0" border="0" class="wspread <%= component.name%> <%= component.id%>" width="<%= style.width%>" valign="top" align="center" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-width:<%= style.width%>px;">
+            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
+            <tr>
+              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
+                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
+              </td>
+            </tr>
+            <% } %>
+            <tr>
+              <td width="<%= style.width%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
+                <table cellspacing="0" cellpadding="0" border="0" class="wspread" width="<%= style.width%>" valign="top" align="center" style="min-width:<%= style.width%>px;">
+                  <tr>
+                    <td width="<%= sidePad%>" class="side-pad">
+                      <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
+                    </td>
+                    <td align="<%= component.align || 'left'%>" valign="middle" style="line-height:0">
+                      <% if(component.linked) { %>
+                      <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
+                      <% } %>
+                      <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/100x70&amp;text=Logo" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                      <img src="http://placehold.it/100x70&amp;text=Logo" alt="" style="display:block;border:0;" class="mobile-hide" />
+                      <% if(component.linked) { %>
+                      </a>
+                      <% } %>
+                    </td>
+                    <td align="<%= component.align || 'left'%>" valign="middle" style="line-height:0">
+                      <% if(component.linked) { %>
+                      <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
+                      <% } %>
+                      <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/160x70&amp;text=Logo" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                      <img src="http://placehold.it/165x70&amp;text=Logo" alt="" style="display:block;border:0;" class="mobile-hide" />
+                      <% if(component.linked) { %>
+                      </a>
+                      <% } %>
+                    </td>
+                    <td width="<%= sidePad%>" class="side-pad">
+                      <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
+            <tr>
+              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
+                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
+              </td>
+            </tr>
+            <% } %>
+          </table>
           <!-- END <%= component.name%> <%= component.id%> -->
