--- a/app/templates/components/LeftCopyRightImage/index.html
+++ b/app/templates/components/LeftCopyRightImage/index.html
@@ -1,108 +1,102 @@
 					<!-- BEGIN <%= component.name%> <%= component.id%> -->
-          <tr>
-            <td width="<%= style.width%>" valign="top" class="wspread" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-wdith:<%= style.width%>px">
-              <table class="wspread" width="<%= style.width%>" valign="top" align="center" style="min-width:<%= style.width%>px;">
-                <tr>
-                  <td width="100%" style="line-height:0">
-                    <img class="tb-pad" src="img/p.gif" height="<%= tbPad%>" width="100%" style="display:block;border:0;" border="0"/>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td width="<%= style.width%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-            	<table class="wspread" width="<%= style.width%>" valign="top" align="center" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-width:<%= style.width%>px;">
-            		<tr>
-            			<td width="<%= sidePad%>" class="side-pad">
-                    <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
-                  </td>
-            			<td align="left">
-            				<table class="wspread msofix" width="<%= (style.width-colGap)/2-sidePad %>" valign="top" align="left">
-                      <tr>
-                        <td width="100%" style="line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px">
-                          <span style="font-family:Arial, Helvetica, sans-serif; font-size:<%= component.style.fontSize || 14%>px;color:<%= component.style.color || '#666666'%>;line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px;">
-                            Dear FirstName,
-                          </span>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td width="100%" height="<%= lineBreakHeight || 10 %>">
-                          <img src="img/p.gif" width="100%" height="<%= lineBreakHeight || 10 %>"/>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td width="100%" style="line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px">
-                          <span style="font-family:Arial, Helvetica, sans-serif; font-size:<%= component.style.fontSize || 14%>px;color:<%= component.style.color || '#666666'%>;line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px;">
-                            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
-                          </span>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td width="100%" height="<%= lineBreakHeight || 10 %>">
-                          <img src="img/p.gif" width="100%" height="<%= lineBreakHeight || 10 %>"/>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td width="100%" style="line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px">
-                          <span style="font-family:Arial, Helvetica, sans-serif; font-size:<%= component.style.fontSize || 14%>px;color:<%= component.style.color || '#666666'%>;line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px;">
-                            Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-                          </span>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td width="100%" height="<%= lineBreakHeight || 10 %>">
-                          <img src="img/p.gif" width="100%" height="<%= lineBreakHeight || 10 %>"/>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td width="100%" style="line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px">
-                          <span style="font-family:Arial, Helvetica, sans-serif; font-size:<%= component.style.fontSize || 14%>px;color:<%= component.style.color || '#666666'%>;line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px;">
-                            Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus.
-                          </span>
-                        </td>
-                      </tr>
-                    </table>
+          <table cellspacing="0" cellpadding="0" border="0" class="wspread <%= component.name%> <%= component.id%>" width="<%= style.width%>" valign="top" align="center" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-width:<%= style.width%>px;">
+            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
+            <tr>
+              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
+                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
+              </td>
+            </tr>
+            <% } %>
+            <tr>
+              <td width="<%= style.width%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
+              	<table cellspacing="0" cellpadding="0" border="0" class="wspread" width="<%= style.width%>" valign="top" align="center" style="min-width:<%= style.width%>px;">
+              		<tr>
+              			<td width="<%= sidePad%>" class="side-pad">
+                      <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
+                    </td>
+              			<td align="left">
+              				<table cellspacing="0" cellpadding="0" border="0" class="wspread msofix" width="<%= (style.width-(component.colGap || colGap))/2-sidePad %>" valign="top" align="left">
+                        <tr>
+                          <td width="100%" style="line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px">
+                            <span style="font-family:Arial, Helvetica, sans-serif; font-size:<%= component.style.fontSize || 14%>px;color:<%= component.style.color || '#666666'%>;line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px;">
+                              Dear FirstName,
+                            </span>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td width="100%" height="<%= lineBreakHeight || 10 %>">
+                            <img src="img/p.gif" width="100%" height="<%= lineBreakHeight || 10 %>"/>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td width="100%" style="line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px">
+                            <span style="font-family:Arial, Helvetica, sans-serif; font-size:<%= component.style.fontSize || 14%>px;color:<%= component.style.color || '#666666'%>;line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px;">
+                              Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
+                            </span>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td width="100%" height="<%= lineBreakHeight || 10 %>">
+                            <img src="img/p.gif" width="100%" height="<%= lineBreakHeight || 10 %>"/>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td width="100%" style="line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px">
+                            <span style="font-family:Arial, Helvetica, sans-serif; font-size:<%= component.style.fontSize || 14%>px;color:<%= component.style.color || '#666666'%>;line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px;">
+                              Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
+                            </span>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td width="100%" height="<%= lineBreakHeight || 10 %>">
+                            <img src="img/p.gif" width="100%" height="<%= lineBreakHeight || 10 %>"/>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td width="100%" style="line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px">
+                            <span style="font-family:Arial, Helvetica, sans-serif; font-size:<%= component.style.fontSize || 14%>px;color:<%= component.style.color || '#666666'%>;line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px;">
+                              Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus.
+                            </span>
+                          </td>
+                        </tr>
+                      </table>
 
-                    <table class="wspread msofix" width="<%= colGap%>" valign="top" align="left">
-                      <tr>
-                        <td width="100%">
-                          <img src="img/p.gif" width="<%= colGap%>" height="20"/>
-                        </td>
-                      </tr>
-                    </table>
+                      <table cellspacing="0" cellpadding="0" border="0" class="wspread msofix" width="<%= (component.colGap || colGap)%>" valign="top" align="left">
+                        <tr>
+                          <td width="100%">
+                            <img src="img/p.gif" width="<%= (component.colGap || colGap)%>" height="20"/>
+                          </td>
+                        </tr>
+                      </table>
 
-                    <table class="wspread msofix" width="<%= (style.width-colGap)/2-sidePad %>" valign="top" align="left">
-                      <tr>
-                        <td width="100%">
-                          <% if(component.linked) { %>
-                          <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
-                          <% } %>
-                          <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/828x414&amp;text=Side+Image" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap" alt=""></span>
-                          <img src="http://placehold.it/<%= (style.width-colGap)/2-sidePad %>x300&amp;text=Side+Image" alt="" style="display:block;border:0;" class="mobile-hide" />
-                          <% if(component.linked) { %>
-                          </a>
-                          <% } %>
-                        </td>
-                      </tr>
-                    </table>
-            			</td>
-            			<td width="<%= sidePad%>" class="side-pad">
-                    <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
-                  </td>
-            		</tr>
-            	</table>
-            </td>
-          </tr>
-          <tr>
-            <td width="<%= style.width%>" valign="top" class="wspread" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-wdith:<%= style.width%>px">
-              <table class="wspread" width="<%= style.width%>" valign="top" align="center" style="min-width:<%= style.width%>px;">
-                <tr>
-                  <td width="100%" style="line-height:0">
-                    <img class="tb-pad" src="img/p.gif" height="<%= tbPad%>" width="100%" style="display:block;border:0;" border="0"/>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
+                      <table cellspacing="0" cellpadding="0" border="0" class="wspread msofix" width="<%= (style.width-(component.colGap || colGap))/2-sidePad %>" valign="top" align="left">
+                        <tr>
+                          <td width="100%">
+                            <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
+                            <% } %>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/828x414&amp;text=Side+Image" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap" alt=""></span>
+                            <img src="http://placehold.it/<%= (style.width-(component.colGap || colGap))/2-sidePad %>x300&amp;text=Side+Image" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <% if(component.linked) { %>
+                            </a>
+                            <% } %>
+                          </td>
+                        </tr>
+                      </table>
+              			</td>
+              			<td width="<%= sidePad%>" class="side-pad">
+                      <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
+                    </td>
+              		</tr>
+              	</table>
+              </td>
+            </tr>
+            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
+            <tr>
+              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
+                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
+              </td>
+            </tr>
+            <% } %>
+          </table>
           <!-- END <%= component.name%> <%= component.id%> -->
