Style fixes to components

--- a/app/templates/components/AlignedImage/index.html
+++ b/app/templates/components/AlignedImage/index.html
@@ -14,7 +14,7 @@
                     <td width="<%= sidePad%>" class="side-pad">
                       <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
                     </td>
-                    <td width="<%= style.width-(2*sidePad)%>" align="<%= component.align || 'left'%>" valign="middle">
+                    <td width="<%= style.width-(2*sidePad)%>" align="<%= component.align || 'left'%>" valign="middle" style="line-height:0">
                       <% if(component.linked) { %>
                       <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
                       <% } %>
