--- a/app/templates/components/CellImages3x2/index.html
+++ b/app/templates/components/CellImages3x2/index.html
@@ -71,7 +71,9 @@
                         </tr>
                       </table>
 
-                      <span class="mobile-hide" style="display:block;clear:both;height:5px;line-height:0;font-size:0px;">&nbsp;</span>
+                      <div class="mobile-hide" style="display:block;clear:both;height:7px;line-height:0;font-size:0px;">
+                        <img class="mobile-hide" src="img/p.gif" height="7" width="100%" style="display:block;border:0;" border="0" />
+                      </div>
 
                       <table cellspacing="0" cellpadding="0" border="0" class="half-spread msofix" width="33.33%" valign="top" align="left">
                         <tr>
