--- a/app/templates/components/LeftCopyRightImage/index.html
+++ b/app/templates/components/LeftCopyRightImage/index.html
@@ -69,7 +69,7 @@
                         </tr>
                       </table>
 
-                      <table cellspacing="0" cellpadding="0" border="0" class="wspread msofix" width="<%= (style.width-(component.colGap || colGap))/2-sidePad %>" valign="top" align="left">
+                      <table cellspacing="0" cellpadding="0" border="0" class="wspread msofix" width="<%= (style.width-(component.colGap || colGap))/2-sidePad %>" valign="top" align="right">
                         <tr>
                           <td width="100%">
                             <% if(component.linked) { %>
