--- a/app/templates/components/SocialLinks/index.html
+++ b/app/templates/components/SocialLinks/index.html
@@ -15,135 +15,71 @@
                       <table cellspacing="0" cellpadding="0" border="0" align="center" cellpadding="0" cellspacing="0">
                         <tr>
                           <td align="center">
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.cellWidth || 32 %>" height="<%= component.cellHeight || 32 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%" align="center">
-                                  <% if(component.linked) { %>
-                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
-                                  <% } %>
-                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                                  <% if(component.linked) { %>
-                                  </a>
-                                  <% } %>
-                                </td>
-                              </tr>
-                            </table>
 
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.colGap || colGap || 16 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%">
-                                  <img src="img/p.gif" width="<%= component.colGap || colGap || 16 %>" height="20"/>
-                                </td>
-                              </tr>
-                            </table>
+                            <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                            <% } %>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <% if(component.linked) { %>
+                            </a>
+                            <% } %>
 
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.cellWidth || 32 %>" height="<%= component.cellHeight || 32 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%" align="center">
-                                  <% if(component.linked) { %>
-                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
-                                  <% } %>
-                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                                  <% if(component.linked) { %>
-                                  </a>
-                                  <% } %>
-                                </td>
-                              </tr>
-                            </table>
+                            <img src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block" />
 
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.colGap || colGap || 16 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%">
-                                  <img src="img/p.gif" width="<%= component.colGap || colGap || 16 %>" height="20"/>
-                                </td>
-                              </tr>
-                            </table>
+                            <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                            <% } %>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <% if(component.linked) { %>
+                            </a>
+                            <% } %>
 
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.cellWidth || 32 %>" height="<%= component.cellHeight || 32 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%" align="center">
-                                  <% if(component.linked) { %>
-                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
-                                  <% } %>
-                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                                  <% if(component.linked) { %>
-                                  </a>
-                                  <% } %>
-                                </td>
-                              </tr>
-                            </table>
+                            <img src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block" />
 
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.colGap || colGap || 16 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%">
-                                  <img src="img/p.gif" width="<%= component.colGap || colGap || 16 %>" height="20"/>
-                                </td>
-                              </tr>
-                            </table>
+                            <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                            <% } %>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <% if(component.linked) { %>
+                            </a>
+                            <% } %>
 
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.cellWidth || 32 %>" height="<%= component.cellHeight || 32 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%" align="center">
-                                  <% if(component.linked) { %>
-                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
-                                  <% } %>
-                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                                  <% if(component.linked) { %>
-                                  </a>
-                                  <% } %>
-                                </td>
-                              </tr>
-                            </table>
+                            <img src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block" />
 
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.colGap || colGap || 16 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%">
-                                  <img src="img/p.gif" width="<%= component.colGap || colGap || 16 %>" height="20"/>
-                                </td>
-                              </tr>
-                            </table>
+                            <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                            <% } %>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <% if(component.linked) { %>
+                            </a>
+                            <% } %>
 
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.cellWidth || 32 %>" height="<%= component.cellHeight || 32 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%" align="center">
-                                  <% if(component.linked) { %>
-                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
-                                  <% } %>
-                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                                  <% if(component.linked) { %>
-                                  </a>
-                                  <% } %>
-                                </td>
-                              </tr>
-                            </table>
+                            <img src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block" />
 
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.colGap || colGap || 16 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%">
-                                  <img src="img/p.gif" width="<%= component.colGap || colGap || 16 %>" height="20"/>
-                                </td>
-                              </tr>
-                            </table>
+                            <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                            <% } %>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <% if(component.linked) { %>
+                            </a>
+                            <% } %>
 
-                            <table cellspacing="0" cellpadding="0" border="0" class="msofix" width="<%= component.cellWidth || 32 %>" height="<%= component.cellHeight || 32 %>" valign="top" align="left">
-                              <tr>
-                                <td width="100%" align="center">
-                                  <% if(component.linked) { %>
-                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
-                                  <% } %>
-                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                                  <% if(component.linked) { %>
-                                  </a>
-                                  <% } %>
-                                </td>
-                              </tr>
-                            </table>
+                            <img src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block" />
+
+                            <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                            <% } %>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <% if(component.linked) { %>
+                            </a>
+                            <% } %>
+
                           </td>
                         </tr>
                       </table>
