--- a/app/templates/components/AlignedImages2Col/index.html
+++ b/app/templates/components/AlignedImages2Col/index.html
@@ -1,20 +1,20 @@
                       <table cellspacing="0" cellpadding="0" border="0" width="100%" valign="top" align="center">
                         <tr>
-                          <td align="middle" class="2col">
+                          <td align="left" width="50%" class="2col" style="line-height:1;font-size:0;">
                             <% if(component.linked) { %>
                             <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
                             <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/100x70&amp;text=Logo" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wauto"><img src="http://placehold.it/200x140&amp;text=Logo" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wauto" alt=""></span>
                             <img src="http://placehold.it/100x70&amp;text=Logo" alt="" style="display:block;border:0;" class="mobile-hide" />
                             <% if(component.linked) { %>
                             </a>
                             <% } %>
                           </td>
-                          <td align="middle" class="2col">
+                          <td align="right" width="50%" class="2col" style="line-height:1;font-size:0;">
                             <% if(component.linked) { %>
                             <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
                             <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/100x70&amp;text=Logo" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wauto"><img src="http://placehold.it/200x140&amp;text=Logo" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wauto" alt=""></span>
                             <img src="http://placehold.it/100x70&amp;text=Logo" alt="" style="display:block;border:0;" class="mobile-hide" />
                             <% if(component.linked) { %>
                             </a>
