--- a/app/templates/components/CellImages3x1/index.html
+++ b/app/templates/components/CellImages3x1/index.html
@@ -1,66 +1,60 @@
-          <!-- BEGIN <%= component.name%> <%= component.id%> -->
-          <table cellspacing="0" cellpadding="0" border="0" class="wspread <%= component.name%> <%= component.id%>" width="<%= style.width%>" valign="top" align="center" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-width:<%= style.width%>px;">
-            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
-            <tr>
-              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
-              </td>
-            </tr>
-            <% } %>
-            <tr>
-              <td width="<%= style.width%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-                <table cellspacing="0" cellpadding="0" border="0" class="wspread" width="<%= style.width%>" valign="top" align="center" style="min-width:<%= style.width%>px;">
-                  <tr>
-                    <td width="<%= sidePad%>" class="side-pad">
-                      <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
-                    </td>
-                    <td align="center" style="letter-spacing:-1px;">
-
-                      <% if(component.linked) { %>
-                      <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
-                      <% } %>
-                      <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/348x106&amp;text=Cell+Image+1" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                      <img src="http://placehold.it/176x53&amp;text=Cell+Image+1" alt="" style="display:block;border:0;" class="mobile-hide" />
-                      <% if(component.linked) { %>
-                      </a>
-                      <% } %>
-
-                      <img class="wspread" src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block;height:20px!important" />
-
-                      <% if(component.linked) { %>
-                      <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
-                      <% } %>
-                      <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/348x106&amp;text=Cell+Image+2" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                      <img src="http://placehold.it/176x53&amp;text=Cell+Image+2" alt="" style="display:block;border:0;" class="mobile-hide" />
-                      <% if(component.linked) { %>
-                      </a>
-                      <% } %>
-
-                      <img class="wspread" src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block;height:20px!important" />
-
-                      <% if(component.linked) { %>
-                      <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
-                      <% } %>
-                      <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/348x106&amp;text=Cell+Image+3" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                      <img src="http://placehold.it/176x53&amp;text=Cell+Image+3" alt="" style="display:block;border:0;" class="mobile-hide" />
-                      <% if(component.linked) { %>
-                      </a>
-                      <% } %>
-
-                    </td>
-                    <td width="<%= sidePad%>" class="side-pad">
-                      <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
-            <tr>
-              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
-              </td>
-            </tr>
-            <% } %>
-          </table>
-          <!-- END <%= component.name%> <%= component.id%> -->
+                      <!--[if gte mso 9]>
+                        <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0">
+                          <tr>
+                            <td width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
+                      <![endif]-->
+                      <table class="wspread" cellspacing="0" cellpadding="0" border="0" width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
+                        <tr>
+                          <td width="100%" align="left" style="line-height:1;font-size:0;">
+                            <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
+                            <% } %>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wauto"><img src="http://placehold.it/348x106&amp;text=Cell+Image+1" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wauto" alt=""></span>
+                            <img src="http://placehold.it/176x53&amp;text=Cell+Image+1" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <% if(component.linked) { %>
+                            </a>
+                            <% } %>
+                          </td>
+                        </tr>
+                      </table>
+                      <!--[if gte mso 9]>
+                            </td>
+                            <td width="<%= parseInt(component.innerWidth/3, 10)%>" align="center">
+                      <![endif]-->
+                      <table class="wspread" cellspacing="0" cellpadding="0" border="0" width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
+                        <tr>
+                          <td width="100%" align="center" style="line-height:1;font-size:0;">
+                          <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
+                            <% } %>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wauto"><img src="http://placehold.it/348x106&amp;text=Cell+Image+2" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wauto" alt=""></span>
+                            <img src="http://placehold.it/176x53&amp;text=Cell+Image+2" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <% if(component.linked) { %>
+                            </a>
+                            <% } %>
+                          </td>
+                        </tr>
+                      </table>
+                      <!--[if gte mso 9]>
+                            </td>
+                            <td width="<%= parseInt(component.innerWidth/3, 10)%>" align="right">
+                      <![endif]-->
+                      <table class="wspread" cellspacing="0" cellpadding="0" border="0" width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
+                        <tr>
+                          <td width="100%" align="right" style="line-height:1;font-size:0;">
+                            <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
+                            <% } %>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wauto"><img src="http://placehold.it/348x106&amp;text=Cell+Image+3" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wauto" alt=""></span>
+                            <img src="http://placehold.it/176x53&amp;text=Cell+Image+3" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <% if(component.linked) { %>
+                            </a>
+                            <% } %>
+                          </td>
+                        </tr>
+                      </table>
+                      <!--[if gte mso 9]>
+                            </td>
+                          </tr>
+                        </table>
+                      <![endif]-->
