--- a/app/templates/components/CellImages3x2/index.html
+++ b/app/templates/components/CellImages3x2/index.html
@@ -1,38 +1,15 @@
-					<!-- BEGIN <%= component.name%> <%= component.id%> -->
-          <!--
-          body[yahoo] .CellImages6 .half-spread {
-            margin-bottom: 5px;
-          }
-          body[yahoo] .CellImages6 .half-spread td img {
-            width: 97%!important;
-          }
-          body[yahoo] .CellImages6 .half-spread.last-row {
-            margin-bottom: 0;
-          }
-          -->
-          <table cellspacing="0" cellpadding="0" border="0" class="wspread <%= component.name%> <%= component.id%>" width="<%= style.width%>" valign="top" align="center" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-width:<%= style.width%>px;">
-            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
-            <tr>
-              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
-              </td>
-            </tr>
-            <% } %>
-            <tr>
-              <td width="<%= style.width%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-              	<table cellspacing="0" cellpadding="0" border="0" class="wspread" width="<%= style.width%>" valign="top" align="center" style="min-width:<%= style.width%>px;">
-              		<tr>
-              			<td width="<%= sidePad%>" class="side-pad">
-                      <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
-                    </td>
-              			<td align="left">
-                      <table cellspacing="0" cellpadding="0" border="0" class="half-spread msofix" width="33.33%" valign="top" align="left">
+                      <!--[if gte mso 9]>
+                        <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0">
+                          <tr>
+                            <td width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
+                      <![endif]-->
+                      <table class="half-spread left" cellspacing="0" cellpadding="0" border="0" width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
                         <tr>
-                          <td width="100%" align="left" class="a-left">
+                          <td width="100%" align="left" style="line-height:1;font-size:0;">
                             <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
                             <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/352x352&amp;text=Cell+Image+1" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap"><img src="http://placehold.it/352x352&amp;text=Cell+Image+1" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap" alt=""></span>
                             <img src="http://placehold.it/182x182&amp;text=Cell+Image+1" alt="" style="display:block;border:0;" class="mobile-hide" />
                             <% if(component.linked) { %>
                             </a>
@@ -40,14 +17,17 @@
                           </td>
                         </tr>
                       </table>
-
-                      <table cellspacing="0" cellpadding="0" border="0" class="half-spread msofix" width="33.33%" valign="top" align="left">
+                      <!--[if gte mso 9]>
+                            </td>
+                            <td width="<%= parseInt(component.innerWidth/3, 10)%>" align="center">
+                      <![endif]-->
+                      <table class="half-spread right" cellspacing="0" cellpadding="0" border="0" width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
                         <tr>
-                          <td width="100%" align="center" class="a-right">
-                            <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
+                          <td width="100%" align="center" style="line-height:1;font-size:0;">
+                          <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
                             <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/352x352&amp;text=Cell+Image+2" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap"><img src="http://placehold.it/352x352&amp;text=Cell+Image+2" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap" alt=""></span>
                             <img src="http://placehold.it/182x182&amp;text=Cell+Image+2" alt="" style="display:block;border:0;" class="mobile-hide" />
                             <% if(component.linked) { %>
                             </a>
@@ -55,14 +35,17 @@
                           </td>
                         </tr>
                       </table>
-
-                      <table cellspacing="0" cellpadding="0" border="0" class="half-spread msofix" width="33.33%" valign="top" align="left">
+                      <!--[if gte mso 9]>
+                            </td>
+                            <td width="<%= parseInt(component.innerWidth/3, 10)%>" align="right">
+                      <![endif]-->
+                      <table class="half-spread left" cellspacing="0" cellpadding="0" border="0" width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
                         <tr>
-                          <td width="100%" align="right" class="a-left">
+                          <td width="100%" align="right" style="line-height:1;font-size:0;">
                             <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
                             <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/352x352&amp;text=Cell+Image+3" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap"><img src="http://placehold.it/352x352&amp;text=Cell+Image+3" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap" alt=""></span>
                             <img src="http://placehold.it/182x182&amp;text=Cell+Image+3" alt="" style="display:block;border:0;" class="mobile-hide" />
                             <% if(component.linked) { %>
                             </a>
@@ -70,69 +53,73 @@
                           </td>
                         </tr>
                       </table>
+                      <!--[if gte mso 9]>
+                            </td>
+                          </tr>
+                        </table>
+                      <![endif]-->
 
-                      <div class="mobile-hide" style="display:block;clear:both;height:7px;line-height:0;font-size:0px;">
+                      <div class="mobile-hide" style="display:block;clear:both;height:7px;line-height:1;font-size:0px;">
                         <img class="mobile-hide" src="img/p.gif" height="7" width="100%" style="display:block;border:0;" border="0" />
                       </div>
 
-                      <table cellspacing="0" cellpadding="0" border="0" class="half-spread msofix" width="33.33%" valign="top" align="left">
+                      <!--[if gte mso 9]>
+                        <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0">
+                          <tr>
+                            <td width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
+                      <![endif]-->
+                      <table class="half-spread right" cellspacing="0" cellpadding="0" border="0" width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
                         <tr>
-                          <td width="100%" align="left" class="a-right">
+                          <td width="100%" align="left" style="line-height:1;font-size:0;">
                             <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
                             <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/352x352&amp;text=Cell+Image+4" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                            <img src="http://placehold.it/182x182&amp;text=Cell+Image+4" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap"><img src="http://placehold.it/352x352&amp;text=Cell+Image+1" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap" alt=""></span>
+                            <img src="http://placehold.it/182x182&amp;text=Cell+Image+1" alt="" style="display:block;border:0;" class="mobile-hide" />
                             <% if(component.linked) { %>
                             </a>
                             <% } %>
                           </td>
                         </tr>
                       </table>
-
-                      <table cellspacing="0" cellpadding="0" border="0" class="half-spread msofix last-row" width="33.33%" valign="top" align="left">
+                      <!--[if gte mso 9]>
+                            </td>
+                            <td width="<%= parseInt(component.innerWidth/3, 10)%>" align="center">
+                      <![endif]-->
+                      <table class="half-spread left last-row" cellspacing="0" cellpadding="0" border="0" width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
                         <tr>
-                          <td width="100%" align="center" class="a-left">
-                            <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
+                          <td width="100%" align="center" style="line-height:1;font-size:0;">
+                          <% if(component.linked) { %>
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
                             <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/352x352&amp;text=Cell+Image+5" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                            <img src="http://placehold.it/182x182&amp;text=Cell+Image+5" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap"><img src="http://placehold.it/352x352&amp;text=Cell+Image+2" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap" alt=""></span>
+                            <img src="http://placehold.it/182x182&amp;text=Cell+Image+2" alt="" style="display:block;border:0;" class="mobile-hide" />
                             <% if(component.linked) { %>
                             </a>
                             <% } %>
                           </td>
                         </tr>
                       </table>
-
-                      <table cellspacing="0" cellpadding="0" border="0" class="half-spread msofix last-row" width="33.33%" valign="top" align="left">
+                      <!--[if gte mso 9]>
+                            </td>
+                            <td width="<%= parseInt(component.innerWidth/3, 10)%>" align="right">
+                      <![endif]-->
+                      <table class="half-spread right last-row" cellspacing="0" cellpadding="0" border="0" width="<%= parseInt(component.innerWidth/3, 10)%>" align="left">
                         <tr>
-                          <td width="100%" align="right" class="a-right">
+                          <td width="100%" align="right" style="line-height:1;font-size:0;">
                             <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
+                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;">
                             <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/352x352&amp;text=Cell+Image+6" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                            <img src="http://placehold.it/182x182&amp;text=Cell+Image+6" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap"><img src="http://placehold.it/352x352&amp;text=Cell+Image+3" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap" alt=""></span>
+                            <img src="http://placehold.it/182x182&amp;text=Cell+Image+3" alt="" style="display:block;border:0;" class="mobile-hide" />
                             <% if(component.linked) { %>
                             </a>
                             <% } %>
                           </td>
                         </tr>
                       </table>
-              			</td>
-              			<td width="<%= sidePad%>" class="side-pad">
-                      <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
-                    </td>
-              		</tr>
-              	</table>
-              </td>
-            </tr>
-            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
-            <tr>
-              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
-              </td>
-            </tr>
-            <% } %>
-          </table>
-          <!-- END <%= component.name%> <%= component.id%> -->
+                      <!--[if gte mso 9]>
+                            </td>
+                          </tr>
+                        </table>
+                      <![endif]-->
