--- a/app/templates/components/LeftCopyRightImage/index.html
+++ b/app/templates/components/LeftCopyRightImage/index.html
@@ -1,21 +1,9 @@
-					<!-- BEGIN <%= component.name%> <%= component.id%> -->
-          <table cellspacing="0" cellpadding="0" border="0" class="wspread <%= component.name%> <%= component.id%>" width="<%= style.width%>" valign="top" align="center" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-width:<%= style.width%>px;">
-            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
-            <tr>
-              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
-              </td>
-            </tr>
-            <% } %>
-            <tr>
-              <td width="<%= style.width%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-              	<table cellspacing="0" cellpadding="0" border="0" class="wspread" width="<%= style.width%>" valign="top" align="center" style="min-width:<%= style.width%>px;">
-              		<tr>
-              			<td width="<%= sidePad%>" class="side-pad">
-                      <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
-                    </td>
-              			<td align="left">
-              				<table cellspacing="0" cellpadding="0" border="0" class="wspread msofix" width="<%= (style.width-(component.colGap || colGap))/2-sidePad %>" valign="top" align="left">
+              				<!--[if gte mso 9]>
+                        <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0">
+                          <tr>
+                            <td width="<%= parseInt(component.innerWidth/2, 10)%>" align="left">
+                      <![endif]-->
+                      <table cellspacing="0" cellpadding="0" border="0" class="wspread text" width="<%= parseInt(component.innerWidth/2, 10)%>" valign="top" align="left">
                         <tr>
                           <td width="100%" style="line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px">
                             <span style="font-family:Arial, Helvetica, sans-serif; font-size:<%= component.style.fontSize || 14%>px;color:<%= component.style.color || '#666666'%>;line-height:<%= (component.style.fontSize || 14) * (component.style.lineHeight || 1.2)%>px;">
@@ -60,43 +48,26 @@
                           </td>
                         </tr>
                       </table>
-
-                      <table cellspacing="0" cellpadding="0" border="0" class="wspread msofix" width="<%= (component.colGap || colGap)%>" valign="top" align="left">
+                      <!--[if gte mso 9]>
+                            </td>
+                            <td width="<%= parseInt(component.innerWidth/2, 10)%>" align="right">
+                      <![endif]-->
+                      <table cellspacing="0" cellpadding="0" border="0" class="wspread image" width="<%= parseInt(component.innerWidth/2, 10)%>" valign="top" align="right">
                         <tr>
-                          <td width="100%">
-                            <img src="img/p.gif" width="<%= (component.colGap || colGap)%>" height="20"/>
-                          </td>
-                        </tr>
-                      </table>
-
-                      <table cellspacing="0" cellpadding="0" border="0" class="wspread msofix" width="<%= (style.width-(component.colGap || colGap))/2-sidePad %>" valign="top" align="right">
-                        <tr>
-                          <td width="100%">
+                          <td width="100%" align="right">
                             <% if(component.linked) { %>
                             <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;">
                             <% } %>
                             <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/828x414&amp;text=Side+Image" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap" alt=""></span>
-                            <img src="http://placehold.it/<%= (style.width-(component.colGap || colGap))/2-sidePad %>x300&amp;text=Side+Image" alt="" style="display:block;border:0;" class="mobile-hide" />
+                            <img src="http://placehold.it/<%= parseInt(component.innerWidth/2, 10) - (component.colGap || colGap)%>x300&amp;text=Side+Image" alt="" style="display:block;border:0;" class="mobile-hide" />
                             <% if(component.linked) { %>
                             </a>
                             <% } %>
                           </td>
                         </tr>
                       </table>
-              			</td>
-              			<td width="<%= sidePad%>" class="side-pad">
-                      <img class="side-pad" src="img/p.gif" height="30" width="<%= sidePad%>" style="display:block;border:0;" border="0">
-                    </td>
-              		</tr>
-              	</table>
-              </td>
-            </tr>
-            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
-            <tr>
-              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
-              </td>
-            </tr>
-            <% } %>
-          </table>
-          <!-- END <%= component.name%> <%= component.id%> -->
+                      <!--[if gte mso 9]>
+                            </td>
+                          </tr>
+                        </table>
+                      <![endif]-->
