--- a/app/templates/components/SocialLinks/index.html
+++ b/app/templates/components/SocialLinks/index.html
@@ -1,99 +1,64 @@
-          <!-- BEGIN <%= component.name%> <%= component.id%> -->
-          <table cellspacing="0" cellpadding="0" border="0" class="wspread <%= component.name%> <%= component.id%>" width="<%= style.width%>" valign="top" align="center" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-width:<%= style.width%>px;">
-            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
-            <tr>
-              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
-              </td>
-            </tr>
-            <% } %>
-            <tr class="<%= component.name%>">
-              <td width="<%= style.width%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-                <table cellspacing="0" cellpadding="0" border="0" class="wspread" width="<%= style.width%>" valign="top" align="center" bgcolor="<%= component.style.backgroundColor || style.backgroundColor || 'none'%>" style="min-width:<%= style.width%>px;">
-                  <tr>
-                    <td align="center">
-                      <table cellspacing="0" cellpadding="0" border="0" align="center" cellpadding="0" cellspacing="0">
-                        <tr>
-                          <td align="center">
-
-                            <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
-                            <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                            <% if(component.linked) { %>
-                            </a>
-                            <% } %>
-
-                            <img src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block" />
-
-                            <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
-                            <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                            <% if(component.linked) { %>
-                            </a>
-                            <% } %>
-
-                            <img src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block" />
-
-                            <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
-                            <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                            <% if(component.linked) { %>
-                            </a>
-                            <% } %>
-
-                            <img src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block" />
-
-                            <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
-                            <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                            <% if(component.linked) { %>
-                            </a>
-                            <% } %>
-
-                            <img src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block" />
-
-                            <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
-                            <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                            <% if(component.linked) { %>
-                            </a>
-                            <% } %>
-
-                            <img src="img/p.gif" width="<%= component.colGap || colGap || 10 %>" height="20" style="display:inline-block" />
-
-                            <% if(component.linked) { %>
-                            <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:inline-block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
-                            <% } %>
-                            <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
-                            <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
-                            <% if(component.linked) { %>
-                            </a>
-                            <% } %>
-
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <% if(isNaN(component.tbPad) || component.tbPad > 0) { %>
-            <tr>
-              <td width="<%= style.width%>" height="<%= component.tbPad || tbPad || 13%>" valign="top" class="wspread" style="min-wdith:<%= style.width%>px">
-                <img src="img/p.gif" height="<%= component.tbPad || tbPad || 13%>" width="100%" style="display:block;border:0;" border="0"/>
-              </td>
-            </tr>
-            <% } %>
-          </table>
-          <!-- END <%= component.name%> <%= component.id%> -->
+                            <table cellspacing="0" cellpadding="0" border="0" align="center" width="<%= component.style.width || 250%>">
+                              <tr>
+                                <td align="center">
+                                  <% if(component.linked) { %>
+                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                                  <% } %>
+                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                                  <% if(component.linked) { %>
+                                  </a>
+                                  <% } %>
+                                </td>
+                                <td align="center">
+                                  <% if(component.linked) { %>
+                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                                  <% } %>
+                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                                  <% if(component.linked) { %>
+                                  </a>
+                                  <% } %>
+                                </td>
+                                <td align="center">
+                                  <% if(component.linked) { %>
+                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                                  <% } %>
+                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                                  <% if(component.linked) { %>
+                                  </a>
+                                  <% } %>
+                                </td>
+                                <td align="center">
+                                  <% if(component.linked) { %>
+                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                                  <% } %>
+                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                                  <% if(component.linked) { %>
+                                  </a>
+                                  <% } %>
+                                </td>
+                                <td align="center">
+                                  <% if(component.linked) { %>
+                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                                  <% } %>
+                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                                  <% if(component.linked) { %>
+                                  </a>
+                                  <% } %>
+                                </td>
+                                <td align="center">
+                                  <% if(component.linked) { %>
+                                  <a href="notyetlinked" target="_blank" style="text-decoration:none;border:0;line-height:0;display:block;width:<%= component.cellWidth || 32 %>px;height:<%= component.cellHeight || 32 %>px;">
+                                  <% } %>
+                                  <span style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide"><img src="http://placehold.it/<%= (component.cellWidth || 32)*2 %>x<%= (component.cellHeight || 32)*2 %>&amp;text=f" style="display:none;float:left;overflow:hidden;width:0;height:0;" class="mobile-swap wide" alt=""></span>
+                                  <img src="http://placehold.it/<%= component.cellWidth || 32 %>x<%= component.cellHeight || 32 %>&amp;text=f" alt="" style="display:block;border:0;" class="mobile-hide" />
+                                  <% if(component.linked) { %>
+                                  </a>
+                                  <% } %>
+                                </td>
+                              </tr>
+                            </table>
