--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,8 +56,11 @@
       border-collapse: collapse;
       padding: 0;
       margin: 0;
+      mso-table-lspace: 0pt;
+      mso-table-rspace: 0pt;
     }
     table {
+      padding: 0;
       border-collapse: collapse;
       border-spacing: 0;
       mso-table-lspace: 0pt;
@@ -83,7 +86,6 @@
       body[yahoo] .mobile_link a[href^="sms"] {
         text-decoration: default;
         color: inherit !important;
-        pointer-events: auto;
         cursor: default;
       }
       body[yahoo] .wspread {
@@ -170,10 +172,11 @@
         display: block !important;
         float: none !important;
         overflow: visible !important;
-        margin: 0 auto;
+        margin: 0;
       }
-      body[yahoo] .mobile-swap.wide {
-        width: 100% !important;
+      body[yahoo] .mobile-swap.wauto {
+        width: auto !important;
+        height: 100% !important;
       }
       body[yahoo] .mob-h-auto {
         height: auto!important;
@@ -183,6 +186,7 @@
         max-width: <%= 100-(mSidePad*2)%>%!important;
         min-width: 0!important;
       }
+      EDMCOMPONENTS_STYLE
     }
     @media all and (min-width: 768px) and (max-width: 1024px) {
       body[yahoo] a[href^="tel"],
@@ -201,23 +205,20 @@
       }
     }
   </style>
-  <!--[if gte mso 9]>
-    <style>
-    .msofix {
-      mso-table-lspace:-2pt;
-      mso-table-rspace:-2pt;
-    }
-    </style>
+  <!--[if gte mso 15]>
+  <style type="text/css">
+    table { font-size:1px; line-height:0; mso-margin-top-alt:1px; }
+  </style>
   <![endif]-->
 </head>
 
 <body yahoo="fix" bgcolor="<%= style.backgroundColor%>" style="background: <%= style.backgroundColor%>;">
-  <table id="main-wrapper" width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="<%= style.backgroundColor%>" style="background: <%= style.backgroundColor%>;min-width:<%= style.width%>px;max-width:100%;">
+  <table id="main-wrapper" class="wspread" width="<%= style.width%>" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="<%= style.backgroundColor%>" style="background: <%= style.backgroundColor%>;">
     <tr>
-      <td width="100%" cellpadding="0" cellspacing="0" border="0" align="center">
+      <td class="wspread" width="100%" cellpadding="0" cellspacing="0" border="0" align="center">
 <!-- BEGIN EDM COMPONENTS -->
 
-EDMCOMPONENTS
+EDMCOMPONENTS_MARKUP
 <!-- END EDM COMPONENTS -->
       </td>
     </tr>
